# manifest-schema

./: .editorconfig  .gitignore  AGENTS.md  README.md  manifest.schema.json  pyproject.toml  requirements.txt  setup.cfg
.github/: contributing.md  dependabot.yml  issue_template.md  maintainers_guide.md  pull_request_template.md
.github/workflows/: ci-build.yml  flake8.yml  lint.yml  release.yml  tests.yml
schemas/: manifest.schema.1.0.0.json  manifest.schema.2.0.0.json
scripts/: install_all_and_run_tests.sh  lint.sh  run_flake8.sh  run_format.sh  run_lint.sh  run_tests.sh  uninstall_all.sh
tests/: test_manifest_v1_schema.py  test_manifest_v2_schema.py  utils.py
tests/manifests/v1/: manifest.invalid.json  manifest.valid.json
tests/manifests/v2/: manifest.invalid.json  manifest.valid.json
