[project]
name = "slack_manifest_schema"
version = "0.0.0"
description = "Slack manifest schema"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Slack Technologies, LLC", email = "opensource@slack.com" }]
dependencies = [
	"flake8==7.3.0",
	"black==26.1.0",
	"pytest==9.0.2",
	"jsonschema==4.26.0",
]

[tool.setuptools]
packages = ["tests"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
